Added GitHub Actions CI workflow to auto-run TestNG suite
Added GitHub Actions CI workflow to auto-run TestNG suite